Handlebars, fixed reps issue

--- a/public/members.html
+++ b/public/members.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 <title>Members</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,14 +11,14 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <body>
-  <!-- Top container -->
+  Top container
   <div class="w3-bar w3-top w3-cyan w3-large" style="z-index:4">
     <button class="w3-bar-item w3-button w3-hide-large w3-hover-none w3-hover-text-light-grey" onclick="w3_open();"><i class="fa fa-bars"></i>  Menu</button>
     <a href="https://github.com/kberner14/30-Days" style="padding: 0px" class="w3-bar-item w3-button w3-right "><span class="w3-bar-item w3-right "><i class="fa fa-github "></i>  GitHub Repo</span></a>
   </div>
 
-  <!-- Side Menu -->
-  <nav class="w3-sidebar w3-collapse w3-light-grey" style="z-index:3;width:300px;" id="mySidebar"><br>
+  Side Menu -->
+  <!-- <nav class="w3-sidebar w3-collapse w3-light-grey" style="z-index:3;width:300px;" id="mySidebar"><br>
     <div class="w3-container w3-row">
       <div class="w3-col s8 w3-bar">
         <span>Welcome, <strong><span class="member-name"></span></strong></span><br>
@@ -33,9 +33,9 @@
       <a href="#" class="w3-bar-item w3-button w3-padding w3-blue"><i class="fa fa-home"></i>  Home</a>
       <a href="/logout" class="w3-bar-item w3-button w3-padding"><i class="fa fa-sign-out"></i>  Logout</a>
     </div>
-  </nav>
+  </nav> -->
 
-  <!-- Main Content -->
+  <!-- Main Content
   <div class="w3-main" style="margin-left:300px;margin-top:43px;">
     <header class="w3-container" style="padding-top:22px">
       <h5><b><i class="fa fa-dashboard"></i> Workout Setup</b></h5>
@@ -94,6 +94,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/members.js"></script>
 
-</body>
+</body> -->
 
-</html>
+<!-- </html> -->
